Solve iPhone 5 left white space.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* *, *:before, *:after {
+*, *:before, *:after {
   box-sizing: inherit;
-} */
+}
 
 a:hover {
   text-decoration: none;
@@ -9,6 +9,9 @@ a:hover {
 body {
   text-align: center;
   font-family: sans-serif;
+  max-width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -26,6 +29,9 @@ hr {
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
+  max-width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 .container-fluid {
@@ -62,7 +68,6 @@ html {
 
 .top-container {
   position: relative;
-  height: 510px;
 }
 
 
@@ -73,6 +78,7 @@ html {
   width: 15em;
   height: 15em;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .section-heading {
@@ -150,7 +156,7 @@ th, td {
 @media only screen and (max-width: 991px) {
 
   hr {
-    width: 6%;
+    width: 7%;
   }
 
   .navbar {
@@ -162,9 +168,17 @@ th, td {
     padding: 7%;
   }
 
+  .pipe-organ-image {
+    margin-top: 20px;
+  }
+
+  .section-p {
+    font-size: 1.3rem;
+  }
+
   .title-heading {
     color: white;
-    font-size: 6rem;
+    font-size: 5rem;
     padding-top: 45px;
   }
 
